# Gpu-Monitor

./: LICENSE  README.md  gpu_monitor.py  pyproject.toml  requirements.txt  run_gpu_monitor.sh
gpu_monitor_gui.egg-info/: PKG-INFO  SOURCES.txt
